Baseline at span is shifted inside the <strong> tag https://bugs.webkit.org/show_bug.cgi?id=275699 <rdar://problem/130217599>

Reviewed by Antti Koivisto.

Simplified aligner is not meant to handle nested inline box cases (or any nesting for that matter).

* LayoutTests/fast/text/incorrect-baseline-with-nested-inline-box-expected.html: Added.
* LayoutTests/fast/text/incorrect-baseline-with-nested-inline-box.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBoxVerticalAligner.cpp:
(WebCore::Layout::LineBoxVerticalAligner::computeLogicalHeightAndAlign const):

Canonical link: https://commits.webkit.org/280255@main